force-app/main/default/objects/Account/fields/IDDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>IDDocumentNumber__c</fullName>
    <label>ID Document Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>