force-app/main/default/objects/Account/fields/Need_Audit__c.field-meta.xml
<CustomField>
    <fullName>Need_Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Audit</label>
    <type>Checkbox</type>
</CustomField>