force-app/main/default/objects/Account/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <label>Tax Code</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>