force-app/main/default/objects/Account/validationRules/CheckTaxCode.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTaxCode</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( TaxCode__c,
            &quot;^[A-Za-z0-9]{16}$&quot;))</errorConditionFormula>
    <errorDisplayField>TaxCode__c</errorDisplayField>
    <errorMessage>Deve essere composto da 16 caratteri alfanumerici</errorMessage>
</ValidationRule>