force-app/main/default/objects/Account/validationRules/IsMinor.validationRule-meta.xml
<ValidationRule>
    <fullName>IsMinor</fullName>
    <active>true</active>
    <errorConditionFormula>PersonBirthdate &gt; ADDMONTHS(TODAY(), -12 * 18) &amp;&amp;
ISBLANK(Guarantor__c)</errorConditionFormula>
    <errorDisplayField>Guarantor__c</errorDisplayField>
    <errorMessage>Un minorenne deve avere un garante.</errorMessage>
</ValidationRule>